.metadata/.plugins/org.eclipse.cdt.ui/M3_MINI_RTOS.build.log

**** Build of configuration Default for project M3_MINI_RTOS ****

make all 
"C:\CodeSourcery\Sourcery G++ Lite/bin/arm-none-eabi-gcc" crt0.s exp_handler.s scheduler.s OS.c clock.c core_cm3.c joy_key.c lcd.c led.c main.c runtime.c stm32f10x_it.c systick.c timer.c uart.c -nostdinc  -I. -I "C:\CodeSourcery\Sourcery G++ Lite/arm-none-eabi/include" -I "C:\CodeSourcery\Sourcery G++ Lite/lib/gcc/arm-none-eabi/4.8.1/include"  -mcpu=cortex-m3 -fno-stack-protector -c -O0 -Wall -mthumb -msoft-float -fno-builtin -funsigned-char -fno-strict-aliasing -fno-common -pipe -mapcs -mno-thumb-interwork  
OS.c: In function 'C_Scheduler':
OS.c:82:2: error: 'for' loop initial declarations are only allowed in C99 mode
  for (int i=0; i < tot_no_task; i++){
  ^
OS.c:82:2: note: use option -std=c99 or -std=gnu99 to compile your code
OS.c:82:20: error: 'tot_no_task' undeclared (first use in this function)
  for (int i=0; i < tot_no_task; i++){
                    ^
OS.c:82:20: note: each undeclared identifier is reported only once for each function it appears in
OS.c:83:13: error: invalid type argument of '->' (have 'TCB')
   if (tcb[i]->state == STATE_READY){
             ^
OS.c:84:14: error: invalid type argument of '->' (have 'TCB')
    if (tcb[i]->prio > highest_prio){
              ^
OS.c:85:26: error: invalid type argument of '->' (have 'TCB')
     highest_prio = tcb[i]->prio;
                          ^
OS.c:86:29: error: invalid type argument of '->' (have 'TCB')
     running_task_no = tcb[i]->no_task;
                             ^
OS.c:88:19: error: invalid type argument of '->' (have 'TCB')
    else if (tcb[i]->prio == highest_prio && running_task_no  current_tcb->no_task){
                   ^
OS.c:88:62: error: expected ')' before 'current_tcb'
    else if (tcb[i]->prio == highest_prio && running_task_no  current_tcb->no_task){
                                                              ^
OS.c:80:6: warning: unused variable 'tmp' [-Wunused-variable]
  int tmp = -1;
      ^
OS.c: At top level:
OS.c:96:2: error: initializer element is not constant
  int next_no_task = (current_tcb->no_task+1) % 3;
  ^
OS.c:97:2: warning: data definition has no type or storage class [enabled by default]
  current_tcb = &tcb[next_no_task];
  ^
OS.c:97:2: warning: type defaults to 'int' in declaration of 'current_tcb' [-Wimplicit-int]
OS.c:97:2: error: conflicting types for 'current_tcb'
OS.c:11:6: note: previous declaration of 'current_tcb' was here
 TCB* current_tcb;
      ^
OS.c:97:16: warning: initialization makes integer from pointer without a cast [enabled by default]
  current_tcb = &tcb[next_no_task];
                ^
OS.c:97:2: error: initializer element is not constant
  current_tcb = &tcb[next_no_task];
  ^
OS.c:98:1: error: expected identifier or '(' before '}' token
 }
 ^
OS.c: In function 'OS_Scheduler_Start':
OS.c:105:14: warning: assignment makes integer from pointer without a cast [enabled by default]
  current_tcb = &tcb[0];
              ^
make: *** [OS.o] Error 1

**** Build Finished ****
